test/error/iocheck/err7.rzy
// Error: function is not allowed to output

Err7 = Component
  inp : slot();
  out : signal();

elementary
  inp : slot()
    foo();
  end
  
  foo = function():Boolean
    out();
    return True;
  end
end

